fix css alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 /* stacked column below 48em */
@@ -38,12 +38,13 @@
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
-  align-items: center;
+  align-items: left;
   -webkit-box-pack: start;
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
   justify-content: flex-start;
   color: hsl(0, 0%, 14%);
+  padding-left: 5px;
 
   overflow: auto;
   -webkit-overflow-scrolling: touch;
@@ -108,7 +109,7 @@
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
-  align-items: center;
+  align-items: left;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
